hphp/hack/test/typecheck/must_be_arraykey.php
<?hh // partial

interface I {}

function foo(keyset<I> $k): void {}
